updated html & create new file

--- a/application/views/update_status_email.html
+++ b/application/views/update_status_email.html
@@ -73,8 +73,7 @@
                                             <tr>
                                                 <td align="left"
                                                     style="font-family:helvetica neue,helvetica,sans-serif;font-size:16px;color:#666666;line-height:24px;padding:0 30px 0px 30px">
-                                                    Did you sign up with a different email? Try resetting your password
-                                                    with that address.
+                                                    This is to notify you that order has been moved to the following status : 
                                                 </td>
                                             </tr>
                                             <tr>
@@ -89,7 +88,7 @@
                                                                     <a href="http://email.pinterest.com/mpss/c/1wA/2dUJAA/t.1jy/iSspk3TWSXy88RDX5MxrFQ/h4/i41K-2FvbQBVKuIVW29rFpYjhalycjBBC0Vi21R4HxfyrVh357w8EAe-2FU2RAIlph8-2Bzzg8tK6UwlwxtId7RdeVvNltgC0iNoussBPBxEpZieKOK3MbaDIWgkAupxArWnmqBRv5imYzYoMC34aoKuVDWwCxMcs1GmysuhM-2B9fT-2FlQZdOTtM9-2FhWkaF9DwSmP5Nv"
                                                                        style="font-family:helvetica,sans-serif;font-size:16px;color:#ffffff;text-decoration:none;display:block"
                                                                        target="_blank">
-                                                                        Reset Password
+                                                                        Confirm
                                                                     </a>
                                                                 </td>
                                                             </tr>
@@ -110,8 +109,7 @@
                                             <tr>
                                                 <td align="left"
                                                     style="font-family:helvetica neue,helvetica,sans-serif;font-size:16px;color:#666666;line-height:24px;padding:0 30px 0px 30px">
-                                                    If you didn't ask for a new password . we're sorry! You can ignore
-                                                    this message.
+                                                    Visit the website for further details
                                                 </td>
                                             </tr>
                                             <tr>
