--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -6,7 +6,10 @@ body {
 .navbar-default {
     border-radius: 0;
     border: 0;
-    background-color: #0d7963;
+    background-color: #32526E;
+    -webkit-box-shadow: 0px 1px 23px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 1px 23px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 1px 23px -4px rgba(0, 0, 0, 0.75);
 
 }
 
@@ -16,12 +19,14 @@ body {
 
 .navbar-default .navbar-nav > li > a {
     color: #fff;
-    font-weight: 600;
+    font-weight: 500;
+    font-size: 12px;
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     color: #eee;
-    font-weight: 600;
+    font-weight: 500;
+    font-size: 12px;
 }
 
 .sub-header {
